# GateMakerFinalWasm

./: CMakeLists.txt  bs-config.js  index.html
src/: Engine.cpp  Engine.h  main.cpp
src/AABB/: AABB.cpp  AABB.h
src/Engine/: App.cpp  App.h  Engine.h  EngineContext.h
src/Engine/FontManager/: FontData.h  FontManager.cpp  FontManager.h
src/Engine/TextureAtlas/: TextureAtlas.cpp  TextureAtlas.h
src/Engine/TextureManager/: TextureManager.cpp  TextureManager.h
src/Engine/Tree/: EntityTree.cpp  EntityTree.h
src/Engine/colliders/: AABB.cpp  AABB.h  Area.h  Circle.cpp  Circle.h  Collider.cpp  Collider.h  ColliderManager.cpp  ColliderManager.h  RectCollider.cpp  RectCollider.h
src/Engine/controllers/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Engine/entities/: Entity.cpp  Entity.h  Text.cpp  Text.h
src/Engine/math/: Matrix3x3.cpp  Matrix3x3.h  Transform.cpp  Transform.h  TransformData.h  Vector.cpp  Vector.h
src/Engine/renderer/: RenderEntity.cpp  RenderEntity.h  Renderer.cpp  Renderer.h
src/Engine/tree/: EntityTree.cpp  EntityTree.h
src/Engine/utils/: FPSCounter.cpp  FPSCounter.h
src/GateSimulator/: App.cpp  App.h  Rect.cpp  Rect.h
src/TextureAtlas/: SpriteRegion.h  TextureAtlas.cpp  TextureAtlas.h
src/canvas/: Canvas2D.cpp  Canvas2D.h
src/colliders/: Collider.cpp  Collider.h  RectCollider.cpp  RectCollider.h
src/core/: Canvas2D.cpp  Canvas2D.h  FPSCounter.cpp
src/entities/: Entity.h  Rect.cpp  Rect.h
src/inputs/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/math/: Transform.cpp  Transform.h  Vector.cpp  Vector.h
src/renderer/: Renderer.cpp  Renderer.h
src/utils/: FPSCounter.cpp  FPSCounter.h
